--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "hiredis": "^0.4.1",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
+    "morgan": "^1.7.0",
     "redis": "^2.6.0-2",
     "request": "^2.72.0",
     "socket.io": "^1.4.6",
